// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Count Up block saved block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-count-up ugb-countup ugb-countup--v3 ugb-countup--columns-2 ugb--background-opacity-2 ugb--has-background-image ugb-countup--design-design ugb--shadow-1 className"
  style={
    Object {
      "--ugb-background-color": "#123456",
      "backgroundAttachment": "fixed",
      "backgroundColor": "#123456",
      "backgroundImage": "url(backgroundImageURL)",
      "borderRadius": 6,
    }
  }
>
  <div
    className="ugb-content-wrapper"
  >
    <div
      className="ugb-countup__item"
    >
      <h4
        className="ugb-countup__title"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "title1",
            }
          }
        />
      </h4>
      <div
        className="ugb-countup__counter"
        data-delay="16"
        data-duration="1000"
        style={
          Object {
            "color": "#123456",
            "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
            "fontSize": "20px",
            "fontWeight": "countFontWeight",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "countText1",
            }
          }
        />
      </div>
      <p
        className="ugb-countup__description"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "description1",
            }
          }
        />
      </p>
    </div>
    <div
      className="ugb-countup__item"
    >
      <h4
        className="ugb-countup__title"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "title2",
            }
          }
        />
      </h4>
      <div
        className="ugb-countup__counter"
        data-delay="16"
        data-duration="1000"
        style={
          Object {
            "color": "#123456",
            "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
            "fontSize": "20px",
            "fontWeight": "countFontWeight",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "countText2",
            }
          }
        />
      </div>
      <p
        className="ugb-countup__description"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "description2",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`Count Up block saved default block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-count-up ugb-countup ugb-countup--v3 ugb-countup--columns-4 ugb--background-opacity-5"
  style={
    Object {
      "--ugb-background-color": undefined,
      "backgroundAttachment": undefined,
      "backgroundColor": undefined,
      "backgroundImage": undefined,
      "borderRadius": undefined,
    }
  }
>
  <div
    className="ugb-content-wrapper"
  >
    <div
      className="ugb-countup__item"
    >
      <h4
        className="ugb-countup__title"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </h4>
      <div
        className="ugb-countup__counter"
        data-delay="16"
        data-duration="1000"
        style={
          Object {
            "color": undefined,
            "fontSize": "40px",
            "fontWeight": "400",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "$99.99",
            }
          }
        />
      </div>
      <p
        className="ugb-countup__description"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description",
            }
          }
        />
      </p>
    </div>
    <div
      className="ugb-countup__item"
    >
      <h4
        className="ugb-countup__title"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </h4>
      <div
        className="ugb-countup__counter"
        data-delay="16"
        data-duration="1000"
        style={
          Object {
            "color": undefined,
            "fontSize": "40px",
            "fontWeight": "400",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "1,234",
            }
          }
        />
      </div>
      <p
        className="ugb-countup__description"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description",
            }
          }
        />
      </p>
    </div>
    <div
      className="ugb-countup__item"
    >
      <h4
        className="ugb-countup__title"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </h4>
      <div
        className="ugb-countup__counter"
        data-delay="16"
        data-duration="1000"
        style={
          Object {
            "color": undefined,
            "fontSize": "40px",
            "fontWeight": "400",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "1,234.56",
            }
          }
        />
      </div>
      <p
        className="ugb-countup__description"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description",
            }
          }
        />
      </p>
    </div>
    <div
      className="ugb-countup__item"
    >
      <h4
        className="ugb-countup__title"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </h4>
      <div
        className="ugb-countup__counter"
        data-delay="16"
        data-duration="1000"
        style={
          Object {
            "color": undefined,
            "fontSize": "40px",
            "fontWeight": "400",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "£99.99",
            }
          }
        />
      </div>
      <p
        className="ugb-countup__description"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;
